# chronobook

./: .gitignore  CLAUDE.md  Cargo.toml
docs/: admin.md  jwt.md  spec.md  tech_stack.md  todo.md
migrations/: 20250814163732_create_base_tables.down.sql  20250814163732_create_base_tables.up.sql
src/: main.rs
src/api/: error.rs  mod.rs  validators.rs
src/api/v1/: admin.rs  auth.rs  bookings.rs  mod.rs
src/models/: error.rs  mod.rs  validation.rs
src/models/auth/: request.rs  response.rs
src/models/booking/: request.rs  response.rs
src/models/branch/: request.rs  response.rs
src/models/dashboard/: response.rs
src/models/employee/: request.rs  response.rs
src/models/master/: response.rs
src/models/organization/: response.rs
src/models/service/: request.rs  response.rs
src/models/timetable/: request.rs  response.rs
