[package]
name = "chronobook"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["display"] }
dotenv = "0.15.0"
phonenumber = "0.3.7"
poem = "3.1.12"
poem-openapi = { version = "5.1.16", features = [
    "stoplight-elements",
    "uuid",
    "chrono",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
